--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
 $color_red:#F53838;
 $color_white:#fff;
 $color_black:#000;
-$color_grey:#b4b4b4;
+$color_grey:#4F5665;
 
  $media_xxl: 1400px;
  $media_xl: 1200px;
