--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,8 @@ $color_red:#F53838;
 $color_white:#fff;
 $color_black:#000;
 $color_grey:#4F5665;
+$color_light_red:#ffecec;
+$color_light_grey:#EEEFF2;
 
  $media_xxl: 1400px;
  $media_xl: 1200px;
