--- a/styles/_statistics.scss
+++ b/styles/_statistics.scss
@@ -6,11 +6,12 @@
     padding: 50px 0 0 0;
     height: 205px;
     max-width: 100%;
-    @include m.d-flex (space-between, start, nowrap, row, 0, 0);
+    @include m.d-flex (center, start, nowrap, row, 0, 0);
     border-radius: 10px;
     box-shadow: 0px 18px 39px -45px rgba(133, 134, 140, 1);
 
     &__user {
+        padding: 0 0 0 10px;
         height: 130px;
         width: 33%;
         @include m.d-flex (center, center, nowrap, row, 36px, 0);
@@ -27,6 +28,12 @@
                 width: 17px;
                 height: 19px;
             }
+
+            @media(max-width: v.$media_sm) {
+                width: 44px;
+                height: 44px;
+                border-radius: 22px;
+            }
         }
 
         &-right {
@@ -39,9 +46,31 @@
                 @include m.font(20px, 400, v.$color_grey);
                 line-height: 1.5;
             }
+
+            @media(max-width: v.$media_sm) {
+                &-title {
+                    @include m.font(20px, 700, v.$color_black);
+                    line-height: 1.1;
+                }
+    
+                &-desc {
+                    @include m.font(11px, 400, v.$color_grey);
+                    line-height: 1.3;
+                }
+            } 
         }
 
-        
+        @media(max-width: v.$media_md) {
+            height: 85px;
+            @include m.d-flex (center, center, nowrap, row, 10px, 0);
+        } 
+
+        @media(max-width: v.$media_sm) {
+            @include m.d-flex (start, center, nowrap, row, 10px, 0);
+        }
+        @media(max-width: v.$media_min) {
+            border-right: none;
+        }
     }
 
     &__location {
@@ -60,6 +89,12 @@
                 width: 21px;
                 height: 19px;
             }
+
+            @media(max-width: v.$media_sm) {
+                width: 44px;
+                height: 44px;
+                border-radius: 22px;
+            }
         }
 
         &-right {
@@ -72,10 +107,29 @@
                 @include m.font(20px, 400, v.$color_grey);
                 line-height: 1.5;
             }
+
+            @media(max-width: v.$media_sm) {
+                &-title {
+                    @include m.font(20px, 700, v.$color_black);
+                    line-height: 1.1;
+                }
+    
+                &-desc {
+                    @include m.font(11px, 400, v.$color_grey);
+                    line-height: 1.3;
+                }
+            } 
         }
+
+        @media(max-width: v.$media_md) {
+            height: 85px;
+            @include m.d-flex (center, center, nowrap, row, 18px, 0);
+        } 
+
     }
 
     &__server {
+        padding: 0 10px 0 0;
         height: 130px;
         width: 33%;
         @include m.d-flex (center, center, nowrap, row, 36px, 0);
@@ -92,6 +146,12 @@
                 width: 14px;
                 height: 21px;
             }
+
+            @media(max-width: v.$media_sm) {
+                width: 44px;
+                height: 44px;
+                border-radius: 22px;
+            }
         }
 
         &-right {
@@ -104,6 +164,47 @@
                 @include m.font(20px, 400, v.$color_grey);
                 line-height: 1.5;
             }
+
+            @media(max-width: v.$media_sm) {
+                &-title {
+                    @include m.font(20px, 700, v.$color_black);
+                    line-height: 1.1;
+                }
+    
+                &-desc {
+                    @include m.font(11px, 400, v.$color_grey);
+                    line-height: 1.3;
+                }
+            } 
+        }
+
+        @media(max-width: v.$media_md) {
+            height: 85px;
+            @include m.d-flex (center, center, nowrap, row, 18px, 0);
+        } 
+
+        @media(max-width: v.$media_md) {
+            @include m.d-flex (center, center, nowrap, row, 10px, 0);
+        } 
+
+        // @media(max-width: v.$media_sm) {
+        // width: 25%;
+        // }
+
+        @media(max-width: v.$media_sm) {
+            @include m.d-flex (end, center, nowrap, row, 10px, 0);
+        }
+        @media(max-width: v.$media_min) {
+            border-left: none;
         }
     }
+
+    @media(max-width: v.$media_lg) {
+        padding: 20px 0 0 0;
+    } 
+
+    @media(max-width: v.$media_md) {
+        padding: 40px 0 0 0;
+        height: 140px;
+    } 
 }
