--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,9 @@ $color_black:#000;
 $color_grey:#4F5665;
 $color_light_red:#ffecec;
 $color_light_grey:#EEEFF2;
+$color_dark_grey:#4F5665;
 $color_grey_white:#F6F6F6;
+$color_border_grey:#DDDDDD;
 
  $media_xxl: 1400px;
  $media_xl: 1200px;
