--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -108,6 +108,7 @@
             &:hover {
                 background-color: v.$color_red;
                 color: v.$color_white;
+                cursor: pointer;
                 box-shadow: 0px 10px 44px 1px rgba(245, 125, 125, 1);
             }
 
