--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -40,6 +40,7 @@
 
             &:hover {
                 border: 2px solid v.$color_black;
+                cursor: pointer;
             }
         }
 
