--- a/styles/_testimonials.scss
+++ b/styles/_testimonials.scss
@@ -7,8 +7,9 @@
 }
 
 .testimonials {
-    padding: 10px 0 0 0;
+    padding: 10px 0 300px 0;
     @include m.d-flex(start, center, nowrap, column, 0, 0);
+    position: relative;
 
     &__header {
         width: 515px;
@@ -52,6 +53,7 @@
         width: 100%;
         @include m.d-flex(space-between, center, nowrap, row, 0, 0);
         padding: 0 20px 65px;
+
         &-points {
             @include m.d-flex(center, start, nowrap, row, 15px, 0);
 
@@ -72,14 +74,17 @@
 
         &-switch {
             @include m.d-flex(center, start, nowrap, row, 20px, 0);
+
             &-button {
                 width: 60px;
                 height: 60px;
                 border: 2px solid v.$color_red;
                 border-radius: 30px;
                 @include m.d-flex(center, center, nowrap, row, 0, 0);
+
                 &:hover {
                     background-color: v.$color_red;
+                    cursor: pointer;
 
                     .testimonials__footer-switch-button-left,
                     .testimonials__footer-switch-button-right {
@@ -103,10 +108,52 @@
 
                 @media(max-width: v.$media_md) {
                     width: 40px;
-                height: 40px;
-                border-radius: 20px;
+                    height: 40px;
+                    border-radius: 20px;
                 }
             }
+        }
+    }
+}
+
+.subscribe {
+    width: 1140px;
+    height: 233px;
+    background-color: v.$color_white;
+    padding: 70px 60px;
+    border-radius: 10px;
+    overflow: hidden;
+    @include m.position(absolute, 1, -1, top, right, 785px, 85px);
+    @include m.d-flex(center, center, nowrap, row, 395px, 0);
+
+    &__wrapper {
+        max-width: 370px;
+        @include m.d-flex(start, start, nowrap, column, 0, 20px);
+
+        &-title {
+            @include m.font(35px, 500, v.$color_black);
+            line-height: 1.3;
+        }
+
+        &-desc {
+            @include m.font(16px, 400, v.$color_dark_grey);
+            line-height: 1.3;
+        }
+    }
+
+    &__button {
+        width: 250px;
+        height: 60px;
+        color: v.$color_white;
+        background-color: v.$color_red;
+        border: none;
+        border-radius: 10px;
+        @include m.font(16px, 700, v.$color_white);
+        box-shadow: 0px 36px 59px -19px rgba(245, 125, 125, 1);
+
+        &:hover {
+            cursor: pointer;
+            border: 2px solid v.$color_black;
         }
     }
 }
