--- a/styles/_testimonials.scss
+++ b/styles/_testimonials.scss
@@ -114,10 +114,14 @@
             }
         }
     }
+
+    @media(max-width: v.$media_xxl) {
+        padding: 10px 10px 45px 10px;
+    }
 }
 
 .subscribe {
-    width: 1140px;
+    max-width: 1140px;
     height: 233px;
     background-color: v.$color_white;
     padding: 70px 60px;
@@ -139,6 +143,27 @@
             @include m.font(16px, 400, v.$color_dark_grey);
             line-height: 1.3;
         }
+
+        @media(max-width: v.$media_xl) {
+            width: 100%;
+
+            &-title {
+                @include m.font(22px, 500, v.$color_black);
+                line-height: 1.3;
+            }
+        }
+
+        @media(max-width: v.$media_lg) {
+            &-desc {
+                @include m.font(14px, 400, v.$color_dark_grey);
+            }
+        }
+
+        @media(max-width: v.$media_md) {
+            &-title {
+                @include m.font(16px, 500, v.$color_black);
+            }
+        }
     }
 
     &__button {
@@ -150,10 +175,46 @@
         border-radius: 10px;
         @include m.font(16px, 700, v.$color_white);
         box-shadow: 0px 36px 59px -19px rgba(245, 125, 125, 1);
+        flex-shrink: 0;
 
         &:hover {
             cursor: pointer;
             border: 2px solid v.$color_black;
+        }
+    }
+
+    @media(max-width: v.$media_xxl) {
+        @include m.position(relative, 1, -1, top, right, 0, 0);
+    }
+
+    @media(max-width: v.$media_xl) {
+        @include m.d-flex(center, center, nowrap, row, 20%, 0);
+    }
+
+    @media(max-width: v.$media_md) {
+    height: 180px;
+    padding: 70px 30px;
+
+        &__button {
+            width: 180px;
+            height: 50px;
+            @include m.font(14px, 700, v.$color_white);
+        }
+    }
+
+    @media(max-width: v.$media_sm) {
+        height: 155px;
+        padding: 30px 30px;
+        @include m.d-flex(center, center, nowrap, row, 10%, 0);
+
+        &__wrapper{
+            @include m.d-flex(start, start, nowrap, column, 0, 10px);
+        }
+
+        &__button {
+            width: 140px;
+            height: 50px;
+            @include m.font(14px, 700, v.$color_white);
         }
     }
 }
